# core-harness-python-example

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PRD-agent-harness-python.md  PRD-agent-harness.md  README.md  harness.toml  mcp-servers.json  pyproject.toml
.claude/skills/example-skill/: SKILL.md
evals/: conftest.py  pytest.ini
evals/fixtures/sample_project/: README.md  main.py  utils.py
evals/fixtures/sample_skill/: SKILL.md
evals/helpers/: __init__.py  graders.py  model_grader.py  reporter.py  run_agent.py  types.py
evals/suites/: test_built_in_tools.py  test_provider_parity.py  test_skills_loading.py
scripts/: run_evals.py  run_evals.sh
src/agent_harness/: __init__.py  __main__.py  agent.py  cli.py  config.py  hooks.py  mcp.py  providers.py  skills.py  tools_registry.py  types.py
tests/: test_cli.py  test_config.py  test_mcp.py  test_providers.py  test_skills.py
